# ContentTracker

./: .TODO  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go
docs/: TUTOR.md
fluent-bit/conf/: fluent-bit.conf  parsers.conf
migrations/: 20250420044949_create_animes_table.sql
nginx/conf.d/: default.conf
samples/: anilist.csv
src/: main.rs  storage.rs
src/cli/: anime_cli.rs  mod.rs
src/domain/: anime.rs  anime_csv.rs  mod.rs
src/models/: anime.rs  anime_model.rs  mod.rs
src/services/: anime_service.rs  mod.rs
